Mon Aug 17 18:00:00 BST 1998 Michael Meeks <michael@imaginator.com>
	* Major code mangle.
	* Added extra map, renamed structures to acommodate
	* Updated preference menu to cope
	* Rewrote and documented structures
	* Improved and documented placement debugging
	* Added #warning on cheat
	* Improved placing algorithem to favor higher sites
	* Upped version to 0.5.0
	* Fixed C++ style comments
	* Padded 'Tiles Remaining' status to give less of a jump on decrement
	* Implemented 'hint' function
	* Updated Authors, and support mail address
	* Several of Ganesh' fixes:
	* Simplified check_free, it now works
	* Fixed restart, undo destroys map
	* Other useful feedback
	
1998-08-06  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* mahjongg.c (fill_menu): Allow more graphics formats to be used
	for the tiles. 

Mon Aug 3 04:33:57 BST 1998 Ganesh Sittampalam <ganesh.sittampalam@magd.ox.ac.uk>

	* Fixed bug that left a tile selected when you restarted the game
	* Got rid of the "No more movements" message when you won the game
	* Made it decrement the tiles left when you redo a step, rather than
	incrementing it.
	* Fixed bug that left multiple removals with the same sequence number after
	an undo followed by a different removal.

1998-07-25  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* mahjongg.desktop: Added Portuguese translation.

Fri Jun 12 11:56:33 EDT 1998 Gregory McLean <gregm@comstar.net>

	* Applied another patch from Michael Meeks to fix some
	potential problems.

Fri Jun 12 10:08:22 EDT 1998 Gregory Mclean <gregm@comstar.net>

	* Incorperated patch from Michael Meeks, this starts on one
	of the TODO items. (solveable games.). 

Thu Jun 11 17:40:43 BST 1998   Michael Meeks <michael@imaginator.com>

	* Added module solubility.c
	* Moved tile_free into this and altered to use dependancy trees.
	* Added sequence number to each tile
	* Implemented undo
	* Implemented redo
	* Removed redundant 'Tile-Set' icon, replaced with redo

Wed May 27 16:30:18 CDT 1998